# NexusFlow.ai

./: .gitignore  LICENSE  README.md  contributing.md  docker-compose.yml  project-readme.md  pyproject.toml  setup.py  setup.sh
backend/: .env.example  Dockerfile  requirements.txt  run.py  test.sh
backend/adapters/: registry.py
backend/adapters/crewai/: crewai_adapter.py
backend/adapters/interfaces/: base_adapter.py
backend/adapters/langgraph/: langgraph_adapter.py
backend/api/: __init__.py  app.py
backend/api/handlers/: deployment_handler.py  execution_handler.py
backend/db/: session.py
backend/tests/: test_adapters.py  test_backend.py  test_repositories.py  test_services.py
backend/tools/: default_tools.py
docs/: agent_configuration.md  capabilities.md  flow.md  tool.md
examples/: research_assistant.py
frontend/: .env.example  Dockerfile  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  index.js
nexusflow/: .env.example  __init__.py
nexusflow/agents/: __init__.py  analysis_agent.py  coding_agent.py  reasoning_agent.py  retrieval_agent.py
nexusflow/api/: README.md  __init__.py  client.py  models.py  routes.py  server.py
nexusflow/capabilities/: __init__.py  analysis.py  coding.py  reasoning.py  retrieval.py
nexusflow/core/: __init__.py  agent.py  capability.py  flow.py  node.py  state.py
nexusflow/db/: __init__.py  cloudsql.sh  db-init.py  db.md  init_db.py  migrations.py  models.py  repositories.py  session.py
nexusflow/graph/: __init__.py  builder.py  execution.py  router.py
nexusflow/llm/: __init__.py  anthropic.py  openai.py  provider.py  vertexai.py
nexusflow/services/: webhook_service.py
nexusflow/tools/: __init__.py  code_execution.py  data_analysis.py  registry.py  web_search.py
nexusflow/utils/: __init__.py  logging.py  metrics.py  visualization.py
ui/: package.json
ui/public/: index.html  manifest.json
ui/src/: App.jsx
(+80 files in other folders)
