[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusflow"
version = "0.1.0"
description = "Dynamic Agent Orchestration Framework"
readme = "README.md"
authors = [
    {name = "NexusFlow Team", email = "info@nexusflow.ai"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.95.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "uvicorn>=0.22.0",
    "langchain>=0.0.267",
    "langchain-core>=0.0.10",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "google-cloud-aiplatform>=1.25.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pytest>=7.3.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

[project.urls]
"Homepage" = "https://nexusflow.ai"
"Bug Tracker" = "https://github.com/nexusflow/nexusflow/issues"
"Source Code" = "https://github.com/nexusflow/nexusflow"
"Documentation" = "https://docs.nexusflow.ai"

[tool.setuptools]
package-dir = {"" = "."}

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
